[package]
name = "bllvm-lightning"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Lightning Network payment processor module for bllvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-lightning"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "lightning", "payment", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "bllvm-lightning"
path = "src/main.rs"

[dependencies]
# bllvm-node for module system integration
bllvm-node = { path = "../bllvm-node", package = "bllvm-node" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for Lightning node API
reqwest = { version = "0.12", features = ["json"] }

# Lightning invoice parsing (BOLT11)
lightning-invoice = "0.2"

# Bitcoin and cryptography libraries for LDK
bitcoin = { version = "0.32", features = ["std"] }
bitcoin_hashes = "0.13"
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context"] }
rand = "0.8"

# Hex encoding/decoding
hex = "0.4"

# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Futures for async streams
futures = "0.3"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"

