[package]
name = "blvm-lightning"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Lightning Network payment processor module for blvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-lightning"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "lightning", "payment", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-lightning"
path = "src/main.rs"

[dependencies]
# blvm-node for module system integration
blvm-node = "0.1.0"
# Protocol layer for transaction/block types
blvm-protocol = "0.1.3"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for Lightning node API
reqwest = { version = "0.12", features = ["json"] }

# Lightning invoice parsing (BOLT11)
lightning-invoice = "0.2"

# Bitcoin and cryptography libraries for LDK
# Note: lightning-invoice 0.2 uses bitcoin_hashes 0.3 and secp256k1 0.12
# We need to align with these versions to avoid type mismatches
# However, bitcoin 0.32 may require newer versions - we'll use dependency resolution
bitcoin = { version = "0.32", features = ["std"] }
# Force alignment with lightning-invoice 0.2 dependencies
bitcoin_hashes = "0.3"  # Match lightning-invoice 0.2
secp256k1 = "0.12"  # Match lightning-invoice 0.2
rand = "0.8"

# Hex encoding/decoding
hex = "0.4"

# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Futures for async streams
futures = "0.3"

# Async trait support
async-trait = "0.1"

# Local development: Use [patch.crates-io] to override with local paths
# For production/CI, these patches are removed and crates.io versions are used
[patch.crates-io]
blvm-node = { path = "../blvm-node" }
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }
blvm-sdk = { path = "../blvm-sdk" }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"

